--- a/Календарь/Математика.md
+++ b/Календарь/Математика.md
@@ -1,2 +1,4 @@
+Математика - первый месяц года
+
 Изначально слово «математика» на древнегреческом языке означало «изучение» или «наука». Оно исторически сложилось на основе измерения и описания природы - творений Бога. 
 Современная математика не столько наука, сколько язык естественных наук, но широко используется в них как для точной формулировки их содержания, так и для получения новых результатов. Математика предоставляет язык другим наукам, тем самым выявляет их структурную взаимосвязь и способствует нахождению самых общих законов Вселенной – законов Бога.
