Update and rename II. Физика.md to Физика.md

--- a/Календарь/Физика.md
+++ b/Календарь/Физика.md
@@ -1,2 +1,4 @@
+Физика -второй месяц года
+
 Изначальное значение слова «физика» - Вселенная. Сегодня физика – наука об основополагающих законах и свойствах окружающей нас Вселенной. Физика изучает взаимодействия творений Бога без превращения их состава. Путь современной физики: наблюдение – гипотеза – теория – эксперимент.  
 Математика – язык Бога, а физика с химией – его слово. 
