Update and rename III. Химия.md to Химия.md

--- a/Календарь/Химия.md
+++ b/Календарь/Химия.md
@@ -1,3 +1,5 @@
+Химия - третий месяц года
+
 Химия – божественная наука, изучающая вещества и их свойства на атомно-молекулярном уровне, то есть на уровне химических элементов и их соединений. а также превращение этих веществ, ведущие к изменению состава. 
 Свойства веществ зависят от их состава и строения, а превращения подчиняются божественным законам и закономерностям. 
 Химия имеет немало связей с физикой и биологией, по сути, граница между ними условна. 
