Update and rename Постулаты to Постулаты.md

--- a/Парадигма Дарго́/Постулаты.md
+++ b/Парадигма Дарго́/Постулаты.md
@@ -1,82 +1,95 @@
 В парадигме Дарго́ пять постулатов и разделение существительных на материальные и абстрактные.
 Мироздание суть единство и борьба двух первооснов, двух абсолютов: Дьявола и Бога. Всё, что существует в мире, находится в динамическом равновесии между влиянием Бога (порядок) и присутствием Дьявола (хаос). Наш мир — поле битвы между Богом и Дьяволом, где Бог создаёт порядок, а Дьявол разрушает его.
-1. Дьявол и Хаосфера
+
+* 1. Дьявол и Хаосфера
 Дьявол — Абсолютная Свобода, воплощённая в Хаосе, неорганизованной, темной материи - эфире. Отсутствие всяких законов, правил и понятий. Эфир – тело Дьявола.
 Единственное, что можно сказать об эфире, — это то, что он содержит возможность всего. Его можно описать как хаос, как абсолютную свободу, как состояние полной симметрии, где ещё нет различий, но возможны все различия.
 Эфир — это не вещество, не поле и не энергия. Эфир - среда абсолютной потенциальности, существовавшая до появления времени, пространства и материи. Он не взаимодействует с нашим миром (во всяком случае это взаимодействие пока не зарегистрировано имеющимися инструментами), не обладает измеримыми свойствами, не структурирован и не проявлен.
-2. Бог и Теосфера
+
+* 2. Бог и Теосфера
 Бог – Абсолютный Порядок, воплощенный в единстве сил и законов Вселенной, в организованной материи, создавший нашу Вселенную и управляющий ею.
 Бог отвоевал у Дьявола часть эфира, ввёл в него законы (физики-химии) и создал упорядоченную материю, подчиняющуюся логике. Любой предмет и вся Вселенная вместе – материальны. Бог – абстрактен, нематериален, свойственен каждому предмету и всей Вселенной вместе. Вселенная - тело Бога.
 Истинная сила Бога не в победе над Дьяволом, а в его же (Бога) бессмертии. Кто верит в Бога, тот не верит в апокалипсис Вселенной и тепловую смерть Вселенной.
 Воля Бога — единство законов Вселенной, по традиции именуемое Богом и в современной науке изучаемая физикой и химией, проявляется:
-В процессах
+
+** В процессах
 1.1. Физических:
   1.1.1. Механических;
   1.1.2. Тепловых;
   1.1.3. Электромагнитных (включая излучение);
   1.1.4. Атомных и ядерных.
 1.2. Химических.
-В фундаментальных взаимодействиях
+
+** В фундаментальных взаимодействиях
 2.1. Гравитационном;
 2.2. Электромагнитном;
 2.3. Сильном;
 2.4. Слабом.
-В усложнении материи
+
+** В усложнении материи
 — от простого к сложному, в процессах эволюции, самоорганизации и возникновения структур.
-В универсальных законах
+
+** В универсальных законах
 4.1. Физики — без изменения химического состава вещества;
 4.2. Химии — с изменением состава;
 4.3. Симметрии — одинаково действует везде и всегда.
-3. Жизнь и Биосфера
+
+* 3. Жизнь и Биосфера
 Жизнь – единство сил и законов живой Природы (не входящие в божественные силы и законы физики с химией), вместе с Богом создавшие Живую природу на Земле и вместе с Богом управляющие ею. Жизнь изучается биологией.
 Живой организм – материален. Жизнь – абстрактна, нематериальна, свойственная живому организму.
+
 Воля живой Природы — именуемая Жизнью и в современной науке изучаемая биологическими науками, проявляется:
-В познании
+** В познании
  — постижении законов Вселенной (Бога) и неизбежном подчинении им.
-В сохранении жизни
+** В сохранении жизни
  2.1. Гомеостаз — поддержание устойчивого состояния живых систем на всех уровнях — от организма до биосферы;
  2.2. Выживание;
  2.3. Инстинкты;
  2.4. Рефлексы;
  2.5. Наследственность.
-В эволюции — процветании
+
+** В эволюции — процветании
  3.1. Рождении нового;
  3.2. Мутациях;
  3.3. Естественном отборе;
  3.4. Смерти старого как одного из условий обновления.
-4. Дух и Ноосфера
+
+* 4. Дух и Ноосфера
 Дух – единство сил и законов человеческого сообщества (не входящие ни в божественные, ни в жизненные силы и законы), вместе с Богом и Жизнью создавшие то или иное сообщество и вместе с ними управляющие этим сообществом.
 Сообщество людей – материально. Дух – не материален, дух – свойство сообщества людей.
+
 Воля человеческого сообщества - именуемая Духом и в современной науке изучаемая гуманитарными науками, проявляется:
-В познании Бога и его законов
+** В познании Бога и его законов
  — с безусловным подчинением ему;
-В познании Жизни и ее законов
+** В познании Жизни и ее законов
  — с осознанным и умеренным подчинением ей;
-В религии
+** В религии
  3.1. Ритуалах;
  3.2. Молитве;
  3.3. Догматах;
-В культуре
+** В культуре
  4.1. Воспитании;
  4.2. Образовании;
  4.3. Морали;
-В искусстве
+** В искусстве
  5.1. Изобразительном;
  5.2. Скульптуре;
  5.3. Литературе;
  5.4. Театре;
  5.5. Кино;
  5.6. Музыке;
-В организации общества
+** В организации общества
  6.1. Этических нормах;
  6.2. Праве;
  6.3. Политике;
-5. Душа и Психосфера
+
+* 5. Душа и Психосфера
 Душа – единство сил и законов человека, создавшая конкретного человека вместе с Богом, Жизнью и Духом и вместе с ними же управляющая человеком.
 Душа – информационная программа выживания и процветания отдельного человека, записанная и в его генах (передается от родителей к детям через оплодотворение), и в его мозгу (передается воспитанием, учебой, культурой). Память человека, его воля. Не существует как материальное тело, но есть - как абстрактное свойство живого человека.
 Если мораль – часть Духа общества, то нравственность – часть души человека.
 Живой организм – материален. Душа – его свойство. Свойственна только живому человеку. И только живому.
-Деятельность человека и его судьба определяются примерно:
+
+*** Деятельность человека и его судьба определяются примерно:
 - на 40% - божественной волей (физикой с химией);
 - на 30% - живой природой (биологией);
 - на 20% - духовностью (культурой с воспитанием)
@@ -84,3 +97,4 @@
 Но это не точно ))
 
 Автор Багомедов Дарго́ Магомед
+
