--- a/Парадигма Дарго́/Постулаты.md
+++ b/Парадигма Дарго́/Постулаты.md
@@ -1,13 +1,13 @@
 В парадигме Дарго́ пять постулатов и разделение существительных на материальные и абстрактные.
 Мироздание суть единство и борьба двух первооснов, двух абсолютов: Дьявола и Бога. Всё, что существует в мире, находится в динамическом равновесии между влиянием Бога (порядок) и присутствием Дьявола (хаос). Наш мир — поле битвы между Богом и Дьяволом, где Бог создаёт порядок, а Дьявол разрушает его.
 
-**1. Дьявол и Хаосфера**
+# 1. Дьявол и Хаосфера
 
 Дьявол — Абсолютная Свобода, воплощённая в Хаосе, неорганизованной, темной материи - эфире. Отсутствие всяких законов, правил и понятий. Эфир – тело Дьявола.
 Единственное, что можно сказать об эфире, — это то, что он содержит возможность всего. Его можно описать как хаос, как абсолютную свободу, как состояние полной симметрии, где ещё нет различий, но возможны все различия.
 Эфир — это не вещество, не поле и не энергия. Эфир - среда абсолютной потенциальности, существовавшая до появления времени, пространства и материи. Он не взаимодействует с нашим миром (во всяком случае это взаимодействие пока не зарегистрировано имеющимися инструментами), не обладает измеримыми свойствами, не структурирован и не проявлен.
 
-**2. Бог и Теосфера**
+# 2. Бог и Теосфера
 
 Бог – Абсолютный Порядок, воплощенный в единстве сил и законов Вселенной, в организованной материи, создавший нашу Вселенную и управляющий ею.
 Бог отвоевал у Дьявола часть эфира, ввёл в него законы (физики-химии) и создал упорядоченную материю, подчиняющуюся логике. Любой предмет и вся Вселенная вместе – материальны. Бог – абстрактен, нематериален, свойственен каждому предмету и всей Вселенной вместе. Вселенная - тело Бога.
@@ -36,7 +36,7 @@
   2.8. Химии — с изменением состава;
   2.9. Симметрии — одинаково действует везде и всегда.
 
-**3. Жизнь и Биосфера**
+# 3. Жизнь и Биосфера
 
 Жизнь – единство сил и законов живой Природы (не входящие в божественные силы и законы физики с химией), вместе с Богом создавшие Живую природу на Земле и вместе с Богом управляющие ею. Жизнь изучается биологией.
 Живой организм – материален. Жизнь – абстрактна, нематериальна, свойственная живому организму.
@@ -57,7 +57,7 @@
   3.8. Естественном отборе;
   3.9. Смерти старого как одного из условий обновления.
 
-**4. Дух и Ноосфера**
+# 4. Дух и Ноосфера
 
 Дух – единство сил и законов человеческого сообщества (не входящие ни в божественные, ни в жизненные силы и законы), вместе с Богом и Жизнью создавшие то или иное сообщество и вместе с ними управляющие этим сообществом.
 Сообщество людей – материально. Дух – не материален, дух – свойство сообщества людей.
@@ -87,7 +87,7 @@
  4.14. Праве;
  4.15. Политике;
 
-**5. Душа и Психосфера**
+# 5. Душа и Психосфера
 
 Душа – единство сил и законов человека, создавшая конкретного человека вместе с Богом, Жизнью и Духом и вместе с ними же управляющая человеком.
 Душа – информационная программа выживания и процветания отдельного человека, записанная и в его генах (передается от родителей к детям через оплодотворение), и в его мозгу (передается воспитанием, учебой, культурой). Память человека, его воля. Не существует как материальное тело, но есть - как абстрактное свойство живого человека.
@@ -100,6 +100,7 @@
 - на 30% - живой природой (биологией);
 - на 20% - духовностью (культурой с воспитанием)
 - на 10% - собственными решениями.
+ 
 Но это не точно ))
 
 Автор Багомедов Дарго́ Магомед
