--- a/Парадигма Дарго́/Темная энергия.md
+++ b/Парадигма Дарго́/Темная энергия.md
@@ -22,8 +22,8 @@
 
 Так что же такое Темная энергия? Свойство Темной материи? Но Темная материя по определению не имеет никаких свойств. Она никак не сформирована, никак не сконструирована. Не зарегистрировано там и никакого движения и взаимодействия. Темная материя – стыдливое название того самого эфира современной наукой. Тогда откуда возьмется и энергия, которая является мерой движения и взаимодействия? Энергия чего?
 
-Если в 
+Если даже допустить, что Темная энергия - свойство Темной материи, но никак нельзя сказать, что "Темная энергия заполняет пространство Вселекнной". Это уже полный бред.  
 
-Короче говоря, Темная энергия – бессмысленная аналогия. Мол, если у материи есть энергия, то и у темной материи должна быть. Не должна. 
+Короче говоря, Темная энергия – бессмысленная аналогия. Мол, если у материи есть энергия, то и у темной материи должна быть.  
 
 Автор: Багомедов Дарго́ Магомед.
