--- a/Парадигма Дарго́/ТемнаяЭнергия.md
+++ b/Парадигма Дарго́/ТемнаяЭнергия.md
@@ -22,7 +22,7 @@
 
 Так что же такое Темная энергия? Свойство Темной материи? Но Темная материя по определению не имеет никаких свойств. Она никак не сформирована, никак не сконструирована. Не зарегистрировано там и никакого движения и взаимодействия. Темная материя – стыдливое название того самого эфира современной наукой. Тогда откуда возьмется и энергия, которая является мерой движения и взаимодействия? Энергия чего?
 
-Если даже допустить, что Темная энергия - свойство Темной материи, но никак нельзя сказать, что "Темная энергия заполняет пространство Вселекнной". Это уже полный бред.  
+Если даже допустить, что Темная энергия - свойство Темной материи, но никак нельзя сказать, что "Темная энергия заполняет пространство Вселенной". Это уже полный бред.  
 
 Короче говоря, Темная энергия – бессмысленная аналогия. Мол, если у материи есть энергия, то и у темной материи должна быть.  
 
