Update and rename ЧернаяДыра.md to ЧерныеДыры.md

--- a/Парадигма Дарго́/ЧерныеДыры.md
+++ b/Парадигма Дарго́/ЧерныеДыры.md
@@ -1,4 +1,4 @@
-## Черная дыра 
+## Черные дыры 
 
 Черная дыра - край Вселенной, который удаляется от нас со скоростью света. И главное в наблюдении за ЧД не масса, а ее скорость. ЧД не поглощает все подряд, а убегает от нас.
 
