--- a/path-dargo/19.md
+++ b/path-dargo/19.md
@@ -1,4 +1,4 @@
-19. Персы - Хlямшурти
+## 19. Персы
 
 - Как ты умудряешься столько читать? – Спросил Мурад у Азиза. – Откуда у тебя столько времени?
 
