Refactor text in stones/02.md for clarity
Removed redundant line breaks and improved sentence structure for clarity.

--- a/stones/02.md
+++ b/stones/02.md
@@ -1,8 +1,9 @@
 ## 2. Адаты
  
+2. Адаты
 Теплый сентябрьский вечер окутывал аул мягким светом заходящего солнца. Ветер лениво шевелил листья на старом орехе перед домом Омара, а в воздухе витал запах свежескошенной травы и дыма от соседских очагов. Руслан шагал по пыльной тропинке к дому деда. Его мысли были спутаны: все время ему говорили про какие-то адаты, а что это такое, никто толком объяснить не мог. Разговоры соседей, ворчание тетки у рынка, даже учитель в школе упоминал это слово, будто оно само собой все объясняло. Но для Руслана это было загадкой, и он решил, что дед Омар, чьи слова всегда звучали как древние сказания, точно знает ответ.
 
-Он толкнул скрипучую калитку и, не теряя времени, с порога выпалил: <br>
+Он толкнул скрипучую калитку и, не теряя времени, с порога выпалил:
 
 - Омар-ада, мне с утра все уши прожужжали про какие-то адаты. А толком объяснить не могут. Ты можешь рассказать?
 
@@ -38,13 +39,16 @@
 
 - Почему их не запишут? 
 
-- Некому, наверное. Их так много, что невозможно все записать. Найдется какой-нибудь умник, вроде тебя, скажет: «А вот это не записано в Адатах»!  Лучше уж пусть в сердце хранится, чем в бумажке потеряется.
+- Некому, наверное. Их так много, что невозможно все записать. Найдется какой-нибудь умник, вроде тебя, скажет: «А вот это не записано в Адатах»!
+
+- Лучше уж пусть в сердце хранится, чем в бумажке потеряется.
 
 - А откуда адаты взялись? - улыбнулся Руслан, глядя на деда.
 
 Омар выпрямился, и в его глазах загорелся огонь, который Руслан видел только в редкие моменты, когда дед рассказывал о прошлом.
 
-- Адаты, Руслан, выработаны в течение веков мудрейшими нашими предками с божьей помощью. Адаты - это свет, что пробивается сквозь тьму невежества и подлости. Это наша радость, согревающая наши души, и наша боль, закаляющая наши души. Это лучшее, что есть у народа, кроме самого народа. В них – и отчий дом, где мы черпаем силу, и священный завет, что передаем из поколения в поколение. Адаты создавали наши предки, поддерживаем мы и будут совершенствовать наши потомки.
+- Адаты, Руслан, выработаны в течение веков мудрейшими нашими предками с божьей помощью. Адаты - это свет, что пробивается сквозь тьму невежества и подлости. Это наша радость, согревающая наши души, и наша боль, закаляющая наши души. Это лучшее, что есть у народа, кроме самого народа. В них
+– и отчий дом, где мы черпаем силу, и священный завет, что передаем из поколения в поколение. Адаты создавали наши предки, поддерживаем мы и будут совершенствовать наши потомки.
 
 Руслан затаил дыхание. Слова деда звучали как песня, как древний гимн, который пели еще его прапрадеды в этих самых горах. Он вдруг почувствовал себя частью чего-то большого, чего-то, что связывает его с теми, кого он никогда не видел.
 
