Remove redundant words in historical narrative

--- a/stones/03.md
+++ b/stones/03.md
@@ -36,9 +36,9 @@
 
 Учитель Ахмед уселся поудобнее и начал свой рассказ.
 
-- В 733 году, когда ни компьютеров, ни интернета, ни даже телефонов и в помине не было, арабский полководец Марван ибн Абд-ал-Малик с огромным войском пришел завоевывать и покорять наши села, хотел захватить нашу главную крепость Хамзин. Она находилась тогда рядом с нынешним селом Гамри. Защитники бились геройски, и хоть арабов было много, они не могли взять крепость.
+- В 733 году, когда ни компьютеров, ни интернета, ни даже телефонов и в помине не было, арабский полководец Марван с огромным войском пришел завоевывать и покорять наши села, хотел захватить нашу главную крепость Хамзин. Она находилась тогда рядом с нынешним селом Гамри. Защитники бились геройски, и хоть арабов было много, они не могли взять крепость.
 
-Тогда Марван крикнул: «Кто возьмёт крепость, тому я дам тысячу динаров и первую красавицу крепости!» Один араб вызвался взять крепость. Он раньше приходил под видом торговца, все заранее разведал, и знал все тропы. Ат-Танухи с отрядом ночью пробрался в крепость, пока все спали, и открыл ворота. Крепость вынуждена была сдаться. Думаю, он был очень доволен собой, предвкушая награду.
+Тогда Марван крикнул: «Кто возьмёт крепость, тому я дам тысячу динаров и первую красавицу крепости!» Один араб вызвался взять крепость. Он раньше приходил под видом торговца, все заранее разведал, и знал все тропы. Этот араб с отрядом ночью пробрался в крепость, пока все спали, и открыл ворота. Крепость вынуждена была сдаться. Думаю, он был очень доволен собой, предвкушая награду.
 
 Марван вызвал этого араба и говорит: «Вот твои динары, а наложницу сам выбирай». Тот выбрал красавицу. Ее так и звали – Джаго. Этот араб хотел обнять ее, но она ударом кинжала снесла ему голову, а потом сама прыгнула в пропасть и погибла. Вот тебе и наложница.
 
