Update text in stones/05.md for clarity

--- a/stones/05.md
+++ b/stones/05.md
@@ -48,4 +48,4 @@
 
 Омар улыбнулся:
 
-- Вот теперь ты понял. Адаты не сковывают - они помогают нам летать. Без них мы бы сталкивались в полёте и падали.
+- Вот теперь ты понял. Адаты не сковывают - они помогают нам пропускать груженых ишаков, что встречаются на пути. 
